# free-channex-pms

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  docker-compose.yml  manage.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1-MILESTONE-AUDIT.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
alembic/: env.py
alembic/versions/: 001_initial_properties.py  002_ingestion_tables.py  003_accounting_tables.py  004_financial_reports.py  005_compliance_tables.py  006_communication_tables.py  007_channex_tables.py  008_messaging_templates.py  009_guidebooks.py  010_cleaning_tasks.py  011_users.py  012_owner_access.py  013_feature_parity.py  014_dynamic_pricing.py  016_invoice_booking_nullable.py  017_payment_booking_nullable.py  018_app_settings.py  019_automation_rules.py  020_booking_sites.py  021_pricing_fixes.py  022_channex_connections.py  023_booking_site_listings.py  1bf0ed7491fa_015_property_operational_fields.py  656cee3e984b_add_missing_property_columns.py
app/: auth.py  config.py  db.py  logging.py  main.py  templates.py
app/accounting/: __init__.py  expenses.py  journal.py  loans.py  reconciliation.py  reports.py  revenue.py
app/api/: __init__.py  accounting.py  analytics.py  automation.py  booking_sites.py  bookings.py  channex.py  communication.py  compliance.py  connected_accounts.py  custom_fields.py  dashboard.py  estimator.py  events.py  extras.py  guests.py  guidebook.py  health.py  inbox.py  ingestion.py  invoices.py  listing_optimizer.py  messaging.py  metrics.py  night_audit.py  owner.py  payments.py  pricing.py  properties.py  query.py  rates.py  reports.py  rooms.py  settings.py  tasks.py  taxes.py  widget.py
app/channex/: __init__.py  calendar.py  client.py  exceptions.py  messaging.py  properties.py  reservations.py  reviews.py  sync.py  webhooks.py
config/: base.example.yaml  base.yaml  config.example.yaml  jay.yaml  minnie.yaml
docs/: api.md  architecture.md  deployment.md  minical-feature-comparison.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
pdf_mappings/: example_form.json  sun_retreats_booking.json
(+419 files in other folders)
