[project]
name = "rental-management"
version = "0.1.0"
description = "Self-hosted vacation rental management platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]",
    "sqlalchemy>=2.0",
    "alembic",
    "pydantic-settings[yaml]",
    "jinja2",
    "typer",
    "questionary",
    "structlog",
    "httpx",
    "psycopg[binary]",
    "python-slugify",
    "polars",
    "python-multipart",
]

[project.scripts]
manage = "manage:cli"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
