[project]
name = "rental-management"
version = "0.1.0"
description = "Self-hosted vacation rental management platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]",
    "sqlalchemy>=2.0",
    "alembic",
    "pydantic-settings[yaml]",
    "jinja2",
    "typer",
    "questionary",
    "structlog",
    "httpx",
    "psycopg[binary]",
    "python-slugify",
    "polars",
    "python-multipart",
    "pymupdf>=1.27.1",
    "aiosmtplib>=5.1.0",
    "apscheduler>=3.11.2",
    "tenacity>=9.1.4",
]

[project.scripts]
manage = "manage:cli"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
